syntax = "proto3";

package heistTrevor;

option go_package = "/;pb";

service heistTrevorService {
  rpc RealizarDistraccion (Solicitud) returns (Resultado);
}

message Solicitud {
  int32 probTrevor = 1;
}

message Resultado {
  bool res = 1;
}
